<resources>
    <string name="app_name">AppVaCov</string>
    <string name="Correo">Correo</string>
    <string name="centro_medico">Centro Medico</string>
    <string name="Clave">Clave</string>
    <string name="Clave2">Repita su Clave</string>
    <string name="Edad">Edad</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="id_sitio">Id Sitio De Vacunación</string>
    <string name="Cedula">Cedula</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="fecha2">Fecha</string>
    <string name="fechar">Fecha Recepcion</string>
    <string name="fechav">Fecha de Vencimiento</string>
    <string name="hora">Hora</string>
    <string name="cantidad">Cantidad</string>
    <string name="id_lote">Id Lote</string>
    <string name="Direccion">Direccion</string>

    <string-array name="tipo_usuario">
        <item>Usuario de Vacunación</item>
        <item>Personal de Vacunación</item>
        <item>Representante de sitio de Vacunación</item>
        <item>Receptor y Distribuidor de Vacunas</item>
    </string-array>
    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="sedes">
        <item>H. Suba</item>
        <item>Colferias</item>
        <item>C. Marly</item>
        <item>H. Engativa</item>
        <item>H. San Ignacio</item>
        <item>H. Mederi</item>
        <item>H. Usaquen</item>
    </string-array>
    <string-array name="sedesa">
        <item>H. Suba</item>
        <item>Colferias</item>
        <item>C. Marly</item>
        <item>H. Engativa</item>
        <item>H. San Ignacio</item>
        <item>H. Mederi</item>
        <item>H. Usaquen</item>
        <item>Domicilio</item>
    </string-array>

    <string-array name="marcas">
        <item>Pfizer</item>
        <item>AstraZeneca</item>
        <item>Novavax​</item>
        <item>Sinovac​</item>
        <item>Covax</item>
    </string-array>

    <string-array name="ocupacion">
        <item>T. Humano Salud 1ra Linea</item>
        <item>Servicios Generales</item>
        <item>P. Administrativo</item>
        <item>P. Apoyo Asistencial</item>
        <item>T. Humano Salud</item>
        <item>Profesor</item>
        <item>Fuerzas Militares</item>
        <item>Policia</item>
        <item>Madre Comunitaria</item>
        <item>Cuidador institucional</item>
        <item>Otro</item>
    </string-array>

    <string-array name="comorbilidades">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="fases">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_maps">Map</string>


</resources>