<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroPersonalVacunacion">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="161dp"
      android:layout_height="161dp"
      android:layout_marginTop="7dp"
      app:layout_constraintBottom_toTopOf="@+id/editText1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/medicine" />

  <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:ems="10"
      android:hint="@string/Cedula"
      android:inputType="number"
      app:layout_constraintBottom_toTopOf="@+id/editText2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="15dp"
      android:ems="10"
      android:hint="@string/Correo"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toTopOf="@+id/editText3"
      app:layout_constraintStart_toStartOf="@+id/editText1"
      app:layout_constraintTop_toBottomOf="@+id/editText1" />

  <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="18dp"
      android:ems="10"
      android:hint="@string/Nombres"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toTopOf="@+id/editText4"
      app:layout_constraintStart_toStartOf="@+id/editText2"
      app:layout_constraintTop_toBottomOf="@+id/editText2" />

  <Spinner
      android:id="@+id/spinner1"
      android:layout_width="211dp"
      android:layout_height="40dp"
      android:layout_marginBottom="23dp"
      android:entries="@array/sedes"
      app:layout_constraintBottom_toTopOf="@+id/editText6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText4" />

  <EditText
      android:id="@+id/editText6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:ems="10"
      android:hint="@string/Clave"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/button1"
      app:layout_constraintStart_toStartOf="@+id/spinner1"
      app:layout_constraintTop_toBottomOf="@+id/spinner1" />

  <Button
      android:id="@+id/button1"
      android:layout_width="160dp"
      android:layout_height="50dp"
      android:layout_marginStart="1dp"
      android:layout_marginLeft="1dp"
      android:layout_marginEnd="1dp"
      android:layout_marginRight="1dp"
      android:layout_marginBottom="10dp"
      android:text="Registrar"
      app:layout_constraintBottom_toTopOf="@+id/button2"
      app:layout_constraintEnd_toEndOf="@+id/button2"
      app:layout_constraintStart_toStartOf="@+id/button2"
      app:layout_constraintTop_toBottomOf="@+id/editText6" />

  <Button
      android:id="@+id/button2"
      android:layout_width="160dp"
      android:layout_height="50dp"
      android:layout_marginBottom="47dp"
      android:backgroundTint="#FF0000"
      android:text="Cancelar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button1" />

  <EditText
      android:id="@+id/editText4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="14dp"
      android:ems="10"
      android:hint="@string/Apellidos"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toTopOf="@+id/spinner1"
      app:layout_constraintStart_toStartOf="@+id/spinner1"
      app:layout_constraintTop_toBottomOf="@+id/editText3" />


</androidx.constraintlayout.widget.ConstraintLayout>